feat(tmux): add RGB-color support.

--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -41,8 +41,10 @@ bind -r Enter resize-pane -Z
 ###############################################################################
 
 # Color
-# ↳ Enable "screen-256color"
-set -g default-terminal "screen-256color"
+# ↳ Enable 256-color support
+set -g default-terminal "tmux-256color"
+# ↳ Enable RBG-color support
+set -as terminal-features ",xterm-256color:RGB"
 # ↳ Clock mode
 set -g clock-mode-color "#ffd700"
 
