feat(ghostty): change color scheme.

--- a/module/homebrew/app/ghostty/config
+++ b/module/homebrew/app/ghostty/config
@@ -17,7 +17,8 @@ keybind = "cmd+enter=toggle_split_zoom"
 ###############################################################################
 
 # Color
-background = "#18191B"
+background = "#011628"
+split-divider-color = "#000f1c"
 
 # Cursor
 cursor-style = "block"
