feat(tmux): change color scheme.

--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -84,12 +84,12 @@ set -g @nova-nerdfonts-left 
 set -g @nova-nerdfonts-right 
 # ↳ Color
 set -g @nova-pane-active-border-style "color220"
-set -g @nova-pane-border-style "#303030"
+set -g @nova-pane-border-style "#000f1c"
 set -g @nova-segment-mode-colors "#{?client_prefix,#fe5f5f,#00ffff} #{?client_prefix,#920101,#006b6b}"
-set -g @nova-segment-whoami-colors "#ffd700 #303030"
+set -g @nova-segment-whoami-colors "#ffd700 #000f1c"
 set -g @nova-status-style-active-bg "#ffd700"
-set -g @nova-status-style-active-fg "#303030"
-set -g @nova-status-style-bg "#303030"
+set -g @nova-status-style-active-fg "#000f1c"
+set -g @nova-status-style-bg "#000f1c"
 set -g @nova-status-style-fg "#ffd700"
 # ↳ Content
 set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W #{?window_zoomed_flag,[Z],}"
