--- a/.github/workflows/secret_scanner.yml
+++ b/.github/workflows/secret_scanner.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
-      - name: Scan secrets in commits
-        run: nix shell nixpkgs#gitleaks --command gitleaks git --no-banner --verbose
-      - name: Scan secrets in files
-        run: nix shell nixpkgs#gitleaks --command gitleaks dir --no-banner --verbose
+      - name: Scan secrets
+        run: |
+          nix shell nixpkgs#gitleaks --command gitleaks git --no-banner --verbose
+          nix shell nixpkgs#gitleaks --command gitleaks dir --no-banner --verbose
