feat(tmux): change color scheme.

--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -46,7 +46,7 @@ set -g default-terminal "tmux-256color"
 # ↳ Enable RBG-color support
 set -as terminal-features ",xterm-256color:RGB"
 # ↳ Clock mode
-set -g clock-mode-color "#ffd700"
+set -g clock-mode-color "#4bc3cc"
 
 # Mouse mode
 # ↳ Enable mouse mode
@@ -83,14 +83,14 @@ set -g @nova-nerdfonts true
 set -g @nova-nerdfonts-left 
 set -g @nova-nerdfonts-right 
 # ↳ Color
-set -g @nova-pane-active-border-style "color220"
+set -g @nova-pane-active-border-style "#4bc3cc"
 set -g @nova-pane-border-style "#000f1c"
-set -g @nova-segment-mode-colors "#{?client_prefix,#fe5f5f,#00ffff} #{?client_prefix,#920101,#006b6b}"
-set -g @nova-segment-whoami-colors "#ffd700 #000f1c"
-set -g @nova-status-style-active-bg "#ffd700"
+set -g @nova-segment-mode-colors "#{?client_prefix,#fe605a,#4bc3cc} #{?client_prefix,#4d141b,#182b2f}"
+set -g @nova-segment-whoami-colors "#4bc3cc #000f1c"
+set -g @nova-status-style-active-bg "#4bc3cc"
 set -g @nova-status-style-active-fg "#000f1c"
 set -g @nova-status-style-bg "#000f1c"
-set -g @nova-status-style-fg "#ffd700"
+set -g @nova-status-style-fg "#64f6ff"
 # ↳ Content
 set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W #{?window_zoomed_flag,[Z],}"
 set -g @nova-segment-mode "#[bold] #S"
