feat(tmux): change bg selection color.

--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -83,6 +83,7 @@ set -g @nova-nerdfonts true
 set -g @nova-nerdfonts-left 
 set -g @nova-nerdfonts-right 
 # ↳ Color
+set -g @nova-mode-style-bg "#275378"
 set -g @nova-pane-active-border-style "#4bc3cc"
 set -g @nova-pane-border-style "#000f1c"
 set -g @nova-segment-mode-colors "#{?client_prefix,#fe605a,#4bc3cc} #{?client_prefix,#4d141b,#182b2f}"
