feat(tmux): change key bindings.

--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -3,13 +3,13 @@
 ###############################################################################
 
 # Prefix
-set -g prefix C-a
-unbind C-b
-bind-key C-a send-prefix
+set -g prefix c-a
+unbind c-b
+bind-key c-a send-prefix
 
 # Detach
 unbind d
-bind z detach-client
+bind c-d detach-client
 
 # Split
 unbind %
@@ -18,10 +18,10 @@ unbind '"'
 bind D split-window -v
 
 # Resize pane
-bind -r C-h resize-pane -L 5
-bind -r C-j resize-pane -D 5
-bind -r C-k resize-pane -U 5
-bind -r C-l resize-pane -R 5
+bind -r c-h resize-pane -L 5
+bind -r c-j resize-pane -D 5
+bind -r c-k resize-pane -U 5
+bind -r c-l resize-pane -R 5
 
 # Vim mode
 # ↳ Visual mode
