test(actions): fix gitleaks.

--- a/.github/workflows/secret-scanner.yml
+++ b/.github/workflows/secret-scanner.yml
@@ -15,6 +15,4 @@ jobs:
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
       - name: Scan secrets
-        run: |
-          nix shell nixpkgs#gitleaks --command gitleaks git --no-banner --verbose
-          nix shell nixpkgs#gitleaks --command gitleaks dir --no-banner --verbose
+        run: nix shell nixpkgs#gitleaks --command gitleaks git --no-banner --verbose
