feat(tmux): change prefix keybinding.

--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -3,9 +3,9 @@
 ###############################################################################
 
 # Prefix
-set -g prefix c-a
+set -g prefix c--
 unbind c-b
-bind-key c-a send-prefix
+bind c-- send-prefix
 
 # Detach
 unbind d
