--- a/module/starship/starship.toml
+++ b/module/starship/starship.toml
@@ -1,6 +1,7 @@
 add_newline = false
 
 [aws]
+disabled = true
 format = '\[[$symbol( ($profile)(\($region\))(\[$duration\]))]($style)\]'
 symbol = 'aws'
 
