--- a/.github/workflows/code-quality-checker.yml
+++ b/.github/workflows/code-quality-checker.yml
@@ -20,3 +20,5 @@ jobs:
         run: nix shell nixpkgs#shfmt --command shfmt -d .
       - name: Check format of Lua files (Stylua)
         run: nix shell nixpkgs#stylua --command stylua -c .
+      - name: Check format of YAML files (yamlfmt)
+        run: nix shell nixpkgs#yamlfmt --command yamlfmt -quiet -lint .
