--- a/module/homebrew/app/ghostty/config
+++ b/module/homebrew/app/ghostty/config
@@ -6,6 +6,9 @@
 keybind = "cmd+p=jump_to_prompt:-1"
 keybind = "cmd+shift+p=jump_to_prompt:1"
 
+# Toggle command palette
+keybind = "cmd+shift+p=toggle_command_palette"
+
 # Toggle quick terminal
 keybind = "cmd+shift+n=toggle_quick_terminal"
 
@@ -44,4 +47,6 @@ resize-overlay = never
 shell-integration-features = "no-cursor"
 
 # Window padding
+window-padding-balance = true
 window-padding-color = "extend"
+window-padding-y = 4
