--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,7 @@ jobs:
         run: nix shell nixpkgs#stylua --command stylua -c .
       - name: Check format of YAML files (yamlfmt)
         run: nix shell nixpkgs#yamlfmt --command yamlfmt -quiet -lint .
+      - name: Check format of git commit messages (gitlint)
+        run: nix shell nixpkgs#gitlint --command gitlint
       - name: Scan secrets
         run: nix shell nixpkgs#gitleaks --command gitleaks git --no-banner --verbose
