--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Check format of YAML files (yamlfmt)
         run: nix shell nixpkgs#yamlfmt --command yamlfmt -quiet -lint .
       - name: Check format of git commit messages (gitlint)
-        run: nix shell nixpkgs#gitlint --command gitlint
+        run: nix shell nixpkgs#gitlint --command gitlint --commit "$(git log --format=format:%H --no-merges -1)"
       - name: Scan secrets
         run: nix shell nixpkgs#gitleaks --command gitleaks git --no-banner --verbose
