--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,25 +6,25 @@ repos:
       - id: alejandra
         name: Alejandra (Nix formatter)
         description: This hook checks Nix files with Alejandra.
-        entry: bash -c 'for arg in "$@"; do nix shell github:NixOS/nixpkgs/nixos-25.11#alejandra --command alejandra -q $arg; done;' --
+        entry: nix shell github:NixOS/nixpkgs/nixos-25.11#alejandra --command bash -c 'for f in "$@"; do alejandra -q "$f"; done' --
         language: system
         files: \.nix$
       - id: shfmt
         name: Sh (shell formatter)
         description: This hook checks shell files with shfmt.
-        entry: bash -c 'for arg in "$@"; do nix shell github:NixOS/nixpkgs/nixos-25.11#shfmt --command shfmt -w $arg; done;' --
+        entry: nix shell github:NixOS/nixpkgs/nixos-25.11#shfmt --command bash -c 'for f in "$@"; do shfmt -w "$f"; done' --
         language: system
         types: [shell]
       - id: stylua
         name: Stylua (Lua formatter)
         description: This hook checks Lua files with Stylua.
-        entry: bash -c 'for arg in "$@"; do nix shell github:NixOS/nixpkgs/nixos-25.11#stylua --command stylua $arg; done;' --
+        entry: nix shell github:NixOS/nixpkgs/nixos-25.11#stylua --command stylua
         language: system
         files: \.lua$
       - id: yamlfmt
         name: Yamlfmt (YAML formatter)
         description: This hook checks YAML files with yamlfmt.
-        entry: bash -c 'for arg in "$@"; do nix shell github:NixOS/nixpkgs/nixos-25.11#yamlfmt --command yamlfmt $arg; done;' --
+        entry: nix shell github:NixOS/nixpkgs/nixos-25.11#yamlfmt --command yamlfmt
         language: system
         types: [yaml]
       - id: gitlint
@@ -36,6 +36,6 @@ repos:
       - id: gitleaks
         name: Gitleaks (secret scanner)
         description: This hook checks the existence of secrets.
-        entry: bash -c 'nix shell github:NixOS/nixpkgs/nixos-25.11#gitleaks --command gitleaks git --pre-commit --staged --redact --no-banner --verbose 2> /dev/null; nix shell github:NixOS/nixpkgs/nixos-25.11#gitleaks --command gitleaks git --redact --no-banner --verbose 2> /dev/null'
+        entry: nix shell github:NixOS/nixpkgs/nixos-25.11#gitleaks --command gitleaks git --pre-commit --staged --redact --no-banner --verbose
         language: system
         pass_filenames: false
