--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,38 +4,44 @@ repos:
   - repo: local
     hooks:
       - id: alejandra
-        name: Alejandra (Nix formatter)
+        name: Alejandra
         description: This hook checks Nix files with Alejandra.
         entry: nix develop . -c bash -c 'for f in "$@"; do alejandra -q "$f"; done' --
         language: system
         files: \.nix$
       - id: shfmt
-        name: Sh (shell formatter)
+        name: Sh
         description: This hook checks shell files with shfmt.
         entry: nix develop . -c bash -c 'for f in "$@"; do shfmt -w "$f"; done' --
         language: system
         types: [shell]
       - id: stylua
-        name: Stylua (Lua formatter)
+        name: Stylua
         description: This hook checks Lua files with Stylua.
         entry: nix develop . -c stylua
         language: system
         files: \.lua$
       - id: yamlfmt
-        name: Yamlfmt (YAML formatter)
+        name: Yamlfmt
         description: This hook checks YAML files with yamlfmt.
         entry: nix develop . -c yamlfmt
         language: system
         types: [yaml]
       - id: gitlint
-        name: Gitlint (git commit message linter)
+        name: Gitlint
         description: This hook checks git commit messages with gitlint.
         entry: nix develop . -c gitlint --staged --msg-filename
         language: system
         stages: [commit-msg]
       - id: gitleaks
-        name: Gitleaks (secret scanner)
+        name: Gitleaks (staged)
         description: This hook checks the existence of secrets.
-        entry: nix develop . -c gitleaks git --pre-commit --staged --redact --no-banner --verbose
+        entry: nix develop . -c gitleaks protect --staged --redact --no-banner --verbose
+        language: system
+        pass_filenames: false
+      - id: gitleaks
+        name: Gitleaks (full history)
+        description: This hook checks the existence of secrets.
+        entry: nix develop . -c gitleaks detect --redact --no-banner --verbose
         language: system
         pass_filenames: false
